Fix invisible div issue

--- a/styles/module/_about.scss
+++ b/styles/module/_about.scss
@@ -11,6 +11,7 @@
 }
 .about_strong {
     color: $pink500;
+    font-size: 18px;
 }
 .about_contactform {
     width: 100%;
